k8s/overlays/shokohsc/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tweetch
spec:
  template:
    metadata:
      labels:
        policy.gatekeeper.sh/ignore-psp-readonlyrootfilesystem: "true"
    spec:
      containers:
        - name: tweetch
          image: shokohsc/tweetch
          securityContext:
            readOnlyRootFilesystem: false
          resources:
            limits:
              memory: 2048M
          volumeMounts:
            - name: temp
              mountPath: /app/node_modules/.vite/
      volumes:
        - name: temp
          emptyDir: {}
