k8s/overlays/shokohsc/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tweetch
  annotations:
    dashboard.home.arpa/name: dev-tweetch
    dashboard.home.arpa/url: https://dev.tweetch.home.arpa
    dashboard.home.arpa/icon: wrench
spec:
  hostnames:
  - dev.tweetch.home.arpa
  parentRefs:
  - name: tweetch
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: tweetch
  rules:
  - backendRefs:
    - name: tweetch
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
